[package]
name = "resonant"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
nalgebra = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fractal = { path = "../fractal" }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlUniformLocation",
    "Window",
    "Performance",
    "Storage",
    "AudioContext",
    "AudioNode",
    "AudioDestinationNode",
    "OscillatorNode",
    "GainNode",
    "AudioParam",
    "MediaDevices",
    "Navigator",
    "console"
]}

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
